<resources>
    <string name="app_name">Zertte</string>
    <string name="zertte">ZERTTE</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">LOGIN</string>
    <string name="alga_qadam_bas">- ALGA QADAM BAS -</string>
    <string name="amp"><![CDATA[&]]></string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="_5_0">(5.0)</string>
    <string name="add_to_favorites_description" />
    <string name="place_image_description" />

    <string name="err_msg_enter_name">Atyñyzdy engızıñız</string>
    <string name="err_msg_enter_last_name">Familiañyzdy engızıñız</string>
    <string name="err_msg_enter_email">Poştañyzdy engızıñız</string>
    <string name="err_msg_enter_password">Qūpia sözdı engızıñız</string>
    <string name="err_msg_enter_confirm_password">Qūpia sözdı qaitalañyz</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Qūpia sözder bırdei emes</string>
    <string name="err_msg_valid_name">Sızdıñ atyñyz dūrys engızılmegen</string>
    <string name="err_msg_valid_last_name">Sızdıñ familiañyz dūrys engızılmegen</string>
    <string name="err_msg_valid_email">Sızdıñ poştañyz dūrys engızılmegen</string>
    <string name="err_msg_valid_password">Qūpia sözdıñ pışımı dūrys emes</string>
    <string name="image">image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>