<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_sign_in">

    <TextView
        android:id="@+id/Zertte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zertte"
        android:textStyle="bold|normal"
        android:paddingTop="90dp"
        android:textSize="64sp"
        android:textAlignment="center"
        android:textColor="@color/jihankezColor"/>

    <TextView
        android:id="@+id/and"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amp"
        android:textSize="30sp"
        android:textStyle="bold|normal"
        android:textAlignment="center"
        android:layout_below="@id/Zertte"
        android:textColor="#305058" />

    <TextView
        android:id="@+id/ff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alga_qadam_bas"
        android:textSize="30sp"
        android:textStyle="bold|normal"
        android:textAlignment="center"
        android:layout_below="@id/and"
        android:textColor="#305058" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:text="@string/email_id"
        android:background="@drawable/stroke"
        android:layout_centerVertical="true"
        android:textColor="@color/gray"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:autofillHints="emailAddress"
        android:paddingStart="16dp"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:text="@string/phone_number"
        android:background="@drawable/stroke"
        android:layout_centerVertical="true"
        android:textColor="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:layout_below="@+id/emailEditText"
        android:paddingStart="16dp"
        android:autofillHints=""
        tools:ignore="RtlSymmetry"
        android:inputType="phone" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:text="@string/password"
        android:background="@drawable/stroke"
        android:layout_centerVertical="true"
        android:textColor="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:layout_below="@+id/phoneNumber"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        tools:ignore="LabelFor,RtlSymmetry,TextFields" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/sign_in"
        android:background="@drawable/rounded_corner"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="50dp"/>

</RelativeLayout>