<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_login">

    <TextView
        android:id="@+id/Zertte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zertte"
        android:textStyle="bold|normal"
        android:paddingTop="90dp"
        android:textSize="64sp"
        android:textAlignment="center"
        android:textColor="@color/jihankezColor"/>

    <TextView
        android:id="@+id/and"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amp"
        android:textSize="30sp"
        android:textStyle="bold|normal"
        android:textAlignment="center"
        android:layout_below="@id/Zertte"
        android:textColor="#305058" />

    <TextView
        android:id="@+id/ff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alga_qadam_bas"
        android:textSize="30sp"
        android:textStyle="bold|normal"
        android:textAlignment="center"
        android:layout_below="@id/and"
        android:textColor="#305058" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:hint="Poşta"
        android:background="@drawable/stroke"
        android:layout_centerVertical="true"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textColorHint="@color/gray"
        android:autofillHints="emailAddress"
        android:paddingStart="16dp"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:hint="Qūpia söz"
        android:background="@drawable/stroke"
        android:layout_centerVertical="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:layout_below="@+id/emailEditText"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        tools:ignore="LabelFor,RtlSymmetry,TextFields" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:text="Qūpia sözdı ūmyttyñyz ba?"
        android:textColor="@color/gray"
        android:layout_marginStart="170dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Kıru"
        android:background="@drawable/rounded_corner"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="50dp"/>

    <View
        android:id="@+id/line"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/loginButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:text="Älı tırkelmegensız be?"
        android:fontFamily="sans-serif-light"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Guide?"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/stroke_guide"
        android:paddingHorizontal="5dp"/>

</RelativeLayout>