<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_sign_in">

    <TextView
        android:id="@+id/Zertte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zertte"
        android:textStyle="bold|normal"
        android:paddingTop="90dp"
        android:textSize="64sp"
        android:textAlignment="center"
        android:textColor="@color/jihankezColor"/>

    <TextView
        android:id="@+id/and"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amp"
        android:textSize="30sp"
        android:textStyle="bold|normal"
        android:textAlignment="center"
        android:layout_below="@id/Zertte"
        android:textColor="#305058" />

    <TextView
        android:id="@+id/ff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alga_qadam_bas"
        android:textSize="30sp"
        android:textStyle="bold|normal"
        android:textAlignment="center"
        android:layout_below="@id/and"
        android:textColor="#305058" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:hint="Atyñyzdy engızıñız"
        android:textColorHint="@color/gray"
        android:background="@drawable/stroke"
        android:layout_below="@+id/ff"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:paddingStart="16dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/enterSurname"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:hint="Familiañyzdy engızıñız"
        android:textColorHint="@color/gray"
        android:background="@drawable/stroke"
        android:layout_below="@+id/enterName"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:paddingStart="16dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:hint="Poşta"
        android:textColorHint="@color/gray"
        android:background="@drawable/stroke"
        android:layout_below="@+id/enterSurname"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:paddingStart="16dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:hint="Qūpia söz"
        android:textColorHint="@color/gray"
        android:background="@drawable/stroke"
        android:layout_centerVertical="true"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/emailEditText"
        android:paddingStart="16dp"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:hint="Qūpia sözdı qaita ter"
        android:textColorHint="@color/gray"
        android:background="@drawable/stroke"
        android:layout_centerVertical="true"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:paddingStart="16dp"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Tırkeu"
        android:background="@drawable/rounded_corner"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginTop="30dp"/>

    <View
        android:id="@+id/line"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/signInButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:text="Akaunt bar ma?"
        android:fontFamily="sans-serif-light"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>